--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       </h2>
       <h2 class="option" id="subth">
         <a id="four" href="./public/sad.html">
-        Sad Meme</h2>
+        Sad Meme
         </a>
+        </h2>
     </div>
   </body>
   <footer id="footer">
