--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1 id="title">Short Memes</h1>
-    <img id="display" src="./assets/kenrick-mills-1h2Pg97SXfA-unsplash.jpg" />
+    <img id="display" src="./assets/display1.jpg" />
     <hr />
     <div id="cover">
       <h2 class="option" id="subst">
