--- a/index.html
+++ b/index.html
@@ -17,20 +17,47 @@
     <hr />
     <div id="cover">
       <h2 class="option" id="subst">
-        <a id="one" href="./public/happy.html"> Happy Meme </a>
+        <a
+          id="one"
+          href="./public/happy.html"
+          onmouseover="addShadow(this)"
+          onmouseout="removeShadow(this)"
+        >
+          Happy Meme
+        </a>
       </h2>
       <h2 class="option" id="subnd">
-        <a id="two" href="./public/funny.html"> Funny Meme </a>
+        <a
+          id="two"
+          href="./public/funny.html"
+          onmouseover="addShadow(this)"
+          onmouseout="removeShadow(this)"
+        >
+          Funny Meme
+        </a>
       </h2>
       <h2 class="option" id="subrd">
-        <a id="three" href="./public/motivation.html"> Motivational Meme </a>
+        <a
+          id="three"
+          href="./public/motivation.html"
+          onmouseover="addShadow(this)"
+          onmouseout="removeShadow(this)"
+        >
+          Motivational Meme
+        </a>
       </h2>
       <h2 class="option" id="subth">
-        <a id="four" href="./public/sad.html">
-        Sad Meme
+        <a
+          id="four"
+          href="./public/sad.html"
+          onmouseover="addShadow(this)"
+          onmouseout="removeShadow(this)"
+        >
+          Sad Meme
         </a>
-        </h2>
+      </h2>
     </div>
+    <script src="./script.js"></script>
   </body>
   <footer id="footer">
     <p>©️ Fransiskus Agapa | All Rights Reserved</p>
